fix : 제출 서류, 프린트 수정

--- a/packages/shared/src/styles/globals.css
+++ b/packages/shared/src/styles/globals.css
@@ -110,3 +110,8 @@ body,
     sans-serif;
   box-sizing: border-box;
 }
+
+* {
+  -webkit-print-color-adjust: exact;
+  print-color-adjust: exact;
+}
